# DIV1D

./: .gitignore  .gitlab-ci.yml  .makefile.swp  Dockerfile  README.md  build_clibtest.sh  build_div1d.sh  build_lib.sh  build_libdiv1d.sh  definelibdiv1d.m  div1d_library_interface.m  div1d_output.txt  div1d_restart_new.txt  license notices  make_copy_mod.sh  makefile  run_clibtest.sh  runs  test_div1d.sh
dev-dyn/div1d_v2/: default1_div1d_restart_from_150683avgvis5neu2qu8.txt  makefile
dev-dyn/src/: constants.f90  dvode_f90_m.f90
dev-dyn/try_fortran/: .gasdat.f90.swp  gasdat.f90  makefile  nudat.f90  outputdata.f90
doc/: DIV1D_manual.tex  DIV1D_manual_flux_expansion.tex  User_manual_Tests.tex  div1d_geometry.eps  limiters_adapted_sweby.eps  limiters_original_sweby.eps  main_1_.tex
int-tests/01_test1/: input.txt
int-tests/02_test2/: input.txt
int-tests/03_wo_core_SOL/: input.txt
int-tests/04_with_core_SOL/: input.txt
int-tests/05_doubleX/: input.txt
int-tests/06_core_SOL_ELM/: input.txt
int-tests/07_core_SOL_ELM_part/: input.txt
int-tests/08_TCV_150683/: input.txt
int-tests/09_neutral_chambers/: input.txt
int-tests/10_molecules_background/: input.txt
int-tests/11_molecules_background_doubleX/: input.txt
int-tests/12_TCV_dynamics/: input.txt
int-tests/13_TCV_dyn_wall_association/: input.txt
int-tests/14_AUG_2700_with_core_SOL/: input.txt
matlibsrc/: definelibdiv1d_extend.m  div1d_lib_arrays.m  div1d_lib_inputs.m  div1d_runner.m  div1d_runstruct.m  read_echo_div1d_inputs.m
src/: .div1d_main.f90.swp  .div1d_solve.f90.swp  .grid_data.f90.swp  .plasma_data.f90.swp  .reaction_rates.f90.swp  .test_div1d_extern.c.swp  constants.f90  div1d_main.f90  div1d_main_old.f90  div1d_solve.f90  div1d_step.f90  experiments.f90  grid_data.f90  libdiv1d.h  numerics_parameters.f90  physics_parameters.f90  physics_routines.f90  plasma_data.f90  radiative_cooling.f90  radiative_cooling_functions_post1977.f90  reaction_rates.f90  rk4.f90  test_div1d_extern.c  test_libdiv1d.c
test/: CMakeLists.txt  XmlManager.py  sample_suite.f90  sample_tester.f90  test_helper.f90
test/inputs/div1d_step_inputs/: div1d_output.txt  echo_div1d_inputs.txt
test/inputs/grid_data_inputs/: div1d_output.txt
test/integration_suites/: div1d_step_suite.f90  grid_data_suite.f90  tester_Div1d_Step.f90  tester_Grid_Data.f90
test/unit_suites/: Grid_Data_Suite.f90  Particle_Conservation_Suite.f90  Physics_Routines_Suite.f90  tester.f90
tests/: div1d_restart_new.txt  div1d_restart_old.txt  input.txt  nohup.out
unit-tests/test1/: input.txt  (+1 more)
(+16 files in other folders)
